# BetterSplineGUI

./: BetterSplineGUI.cabal  README.md  pkgs
src/: #Display.hs#  Bindings.hs  Cube.hs  Display.hs  Main.hs  Points.hs  Program.hs  Rendering.hs
src/Util/: GLFW.hs
src/shader/: fs.glsl  vs.glsl
