name:                           BetterSplineGUI
version:                        0.1.0.0
-- synopsis:            
-- description:         
license:                        AllRightsReserved
license-file:                   LICENSE
author:                         Eivind Fonn
maintainer:                     evfonn@gmail.com
-- copyright:           
category:                       Graphics
build-type:                     Simple
-- extra-source-files:  
cabal-version:                  >= 1.10

executable BetterSplineGUI
    main-is:                    Main.hs
    -- other-modules:       
    -- other-extensions:    
    build-depends:              transformers >= 0.3.0.0,
                                base >= 4.7 && < 4.8,
                                GLFW-b >= 1.4.6 && < 1.5,
                                OpenGL >= 2.9.2.0 && < 2.10,
                                filepath >= 1.3.0.2 && < 1.4,
                                GLUtil >= 0.7.4 && < 0.8,
                                linear >= 1.10.1.2 && < 1.11,
                                bytestring >= 0.10.4 && < 0.11,
                                file-embed >= 0.0.7 && < 0.1,
                                gtk >= 0.12.5.7 && < 0.13,
                                gtkglext-bbf >= 0.12.5.0 && < 0.13,
                                vector >= 0.10.11.0 && < 0.11,
                                clock >= 0.4.0.1 && < 0.5,
                                reactive-banana >= 0.8.0.2 && < 0.9,
                                bifunctors >= 4.1.1.1 && < 4.2
    hs-source-dirs:             src
    default-language:           Haskell2010
